--- a/pom.xml
+++ b/pom.xml
@@ -35,6 +35,12 @@
             <artifactId>fontawesomefx</artifactId>
             <version>8.2</version>
         </dependency>
+        <dependency>
+            <groupId>com.twilio.sdk</groupId>
+            <artifactId>twilio</artifactId>
+            <version>8.21.0</version> <!-- Use the latest version -->
+        </dependency>
+
 
 
     </dependencies>
