--- a/pom.xml
+++ b/pom.xml
@@ -40,6 +40,11 @@
             <artifactId>twilio</artifactId>
             <version>8.21.0</version> <!-- Use the latest version -->
         </dependency>
+        <dependency>
+        <groupId>com.sun.mail</groupId>
+        <artifactId>javax.mail</artifactId>
+        <version>1.6.2</version>
+        </dependency>
 
 
 
