--- a/pom.xml
+++ b/pom.xml
@@ -35,9 +35,18 @@
             <artifactId>fontawesomefx</artifactId>
             <version>8.2</version>
         </dependency>
-
-
+        <dependency>
+            <groupId>com.squareup.okhttp3</groupId>
+            <artifactId>okhttp</artifactId>
+            <version>3.9.1</version>
+        </dependency>
+        <dependency>
+            <groupId>org.json</groupId>
+            <artifactId>json</artifactId>
+            <version>20090211</version>
+        </dependency>
     </dependencies>
+
     <build>
 
         <plugins>
